@@ -1,3 +1,6 @@
+Add: allow configure keystone cache to use Redis backend with env var
+Add: env vars to token expiration and revocation buffer expiraton
+
 1.5.3
 
 Fix: add missed keystone permission for get_project_roles to policy.json (#123)
